- Fix Datefield dissmiss Datechooser when click outside - reduce size of DateChooser cells so overall Datechooser fit better on mobile screens

--- a/frameworks/projects/Jewel/src/main/resources/defaults.css
+++ b/frameworks/projects/Jewel/src/main/resources/defaults.css
@@ -332,13 +332,13 @@ j|ComboBoxList {
   padding: 4px;
 }
 .jewel.datechooser .jewel.table .jewel.tableitem {
-  width: 42px;
-  height: 42px;
+  width: 38px;
+  height: 38px;
 }
 .jewel.datechooser .jewel.table .jewel.tableitem .jewel.tableitem {
   padding: 2px;
-  width: 42px;
-  height: 42px;
+  width: 38px;
+  height: 38px;
 }
 
 .calendar.item {
@@ -3112,7 +3112,7 @@ j|Table {
 }
 
 .jewel.tableitem {
-  padding: 12px;
+  padding: 10px;
   cursor: pointer;
   text-decoration: none;
   align-items: center;
